# CS251-Resources

./: README.md
Lab1/Task1/: download.sh  evaluate.sh  organise.sh
Lab2/: biblio.bib  main.tex  typeset.sh
Lab2/outlab2-resources/: Output  iterate_buggy.cpp
Lab3/numpy/q2_a/: operations3.py  operations4.py  operations5.py
Lab3/numpy/q2_b/: pca.py
Lab3/numpy/q2_b/output/: output.csv
Lab3/python/q1_b/: win.py
Lab3/scipy/: q3_a.py
Lab5/: references.txt
Lab5/Bonus/: bonus.sh
Lab5/Q1/: Q1.sh
Lab5/Q2/: Q2.sh
Lab5/Q3/: Q3.sh
Lab5/Q4/: Q4.sh
Lab5/Q5/: Q5.sh
Lab6/q1/: q1.java
Lab6/q5/: Person.java  Student.java  Teacher.java
Lab8/q1/task1/: pretmat.py
Lab8/q1/task2/: pretree.py
Lab8/q1/task3/: a.out  stack.py
Lab8/q2/: t1.gdb  t3.gdb  t4.gdb  t5.gdb  t6.gdb  t7.gdb  t8.gdb
Lab8/q3/: CMakeLists.txt  rawmake
Lab8/q3/mygame/: CMakeLists.txt
