cmake_minimum_required(VERSION 3.10.2)
project (helloworld)
add_executable(helloworld helloworld.cpp)
include_directories(include)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_executable(usespthread usespthread.cpp)
target_link_libraries(usespthread PRIVATE Threads::Threads)
add_library(MyEngineDynamic SHARED myengine/myengine.cpp)
add_library(MyEngineStatic STATIC myengine/myengine.cpp)
set(HEADERS "myengine/myengine.hpp")
install(FILES ${HEADERS} DESTINATION include)
set(LIBS "build/libMyEngineDynamic.so;build/libMyEngineStatic.a")
install(FILES ${LIBS} DESTINATION lib)
